# nw-watch

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  IMPROVEMENT_PROPOSAL_2026.ja.md  IMPROVEMENT_PROPOSAL_2026.md  IMPROVEMENT_SUGGESTIONS.ja.md  IMPROVEMENT_SUGGESTIONS.md  INVESTIGATION_REPORT.md  NOTICE  README.ja.md  README.md  TEST_IMPROVEMENTS_SUMMARY.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
collector/: __init__.py  main.py
control/: collector_control.json
docs/: IMPROVEMENT_SUGGESTIONS.ja.md  IMPROVEMENT_SUGGESTIONS.md  README.ja.md  README.md  TROUBLESHOOTING.ja.md  TROUBLESHOOTING.md  collector-controls.ja.md  collector-controls.md  specification.ja.md  specification.md  testing.ja.md  testing.md  webui-screenshots.ja.md  webui-screenshots.md
shared/: config.py  db.py  diff.py  export.py  filters.py  validation.py
src/nw_watch/: __init__.py  runtime.py
src/nw_watch/collector/: main.py
src/nw_watch/shared/: config.py  control_state.py  db.py  debug.py  diff.py  export.py  validation.py
tests/: test_collector.py  test_collector_control_integration.py  test_config.py  test_db.py  test_diff.py  test_docker.py  test_error_handling.py  test_export.py  test_filters.py  test_integration.py  test_logging.py  test_persistent_connections.py  test_scheduling.py  test_security.py  test_signal_handling.py  test_startup.py  test_truncate.py  test_validation.py  test_webapp.py  test_websocket.py
webapp/: main.py  websocket_manager.py
webapp/static/: app.js  style.css
webapp/templates/: index.html
(+7 files in other folders)
